# url_shortner

./: .env.example  Cargo.toml  README.md  docker-compose.yml
frontend/: app.js  index.html  style.css
migrations/: 20250605000000_create_urls_table.sql
src/: cache.rs  lib.rs  main.rs
