[package]
name = "url_shortner"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
base62 = "2.2.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
dotenv = "0.15.0"
